@@ -1,3 +1,10 @@
+//
+//  HelloWorldScene.m
+//  ___PROJECTNAME___
+//
+//  Created by ___FULLUSERNAME___ on ___DATE___.
+//  Copyright ___ORGANIZATIONNAME___ ___YEAR___. All rights reserved.
+//
 
 // When you import this file, you import all the cocos2d classes
 #import "cocos2d.h"
